# monitorreminder

./: .gitignore  CHANGELOG.md  LICENSE  MonitorReminder.spec  README.md  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/agents/: python-architect.agent.md  release-manager.agent.md
.github/skills/build-exe/: SKILL.md
.github/skills/github-push/: SKILL.md
.github/skills/gui-improvements/: SKILL.md
.github/skills/spec-driven-development/: SKILL.md
.github/skills/validations/: SKILL.md
.github/skills/windows-layout-validation/: SKILL.md
.github/workflows/: release.yml
docs/: MonitorReminder_Manual_Usuario.docx  github-commands.md  specification.md
scripts/: build.ps1  gen_manual.py
src/monitorreminder/: __init__.py  app.py  config.py  constants.py  i18n.py  logging_utils.py  models.py  monitor_watcher.py  paths.py  window_manager.py
tests/: test_config.py  test_window_manager.py  test_window_math.py
